tests/NormalTests/paczka1/fuzzy1/77346620.err
Error in line 1: kraV A928 55,9
Error in line 22: Fi073 S730 81,2
